.kustomize/media/jellyseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyseerr
      app.kubernetes.io/name: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyseerr
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Singapore
        image: fallenbagel/jellyseerr:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 5055
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: jellyfin
        ports:
        - containerPort: 5055
          name: main
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 5055
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 4000m
            memory: 8Gi
          requests:
            cpu: 10m
            memory: 50Mi
        startupProbe:
          failureThreshold: 60
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5055
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /app/config
          name: config
          subPath: jellyseerr
        - name: data
          mountPath: /tv
          subPath: library/tv
        - name: data
          mountPath: /movies
          subPath: library/movies
        - name: data
          mountPath: /music
          subPath: library/music
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: media-config
      - name: data
        persistentVolumeClaim:
          claimName: media-data
