.kustomize/media/jellyseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  ports:
  - name: main
    port: 5055
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  type: ClusterIP
