.kustomize/media/jellyseerr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: jellyseerr-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: jellyseerr.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 80
